[package]
name = "live-prop-test-macros"
version = "0.1.0"
authors = ["Eli Dupree <vcs@elidupree.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = {version = "1.0", features = ["full", "visit", "visit-mut", "printing"]}
quote = "1.0"
proc-macro2 = "1.0"
proc-macro-error = "1.0.4"

[dev-dependencies]
trybuild = "1.0"
live-prop-test = { path = "../live-prop-test", version = "0.1" }
