[package]
name = "live-prop-test-macros"
version = "0.1.0"
authors = ["Eli Dupree <vcs@elidupree.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Proc macros for live-prop-test."
repository = "https://github.com/elidupree/live-prop-test/"
readme = "../README.md"
keywords = ["property", "testing", "contracts"]
categories = ["development-tools", "development-tools::testing"]

[lib]
proc-macro = true

[dependencies]
syn = {version = "1.0", features = ["full", "visit", "visit-mut", "printing"]}
quote = "1.0"
proc-macro2 = "1.0"
proc-macro-error = "1.0.4"

[dev-dependencies]
trybuild = "1.0"
live-prop-test = { path = "../live-prop-test", version = "0.1" }
version-sync = "0.9"

[package.metadata.docs.rs]
targets = []
