[package]
name = "live-prop-test"
version = "0.1.0"
authors = ["Eli Dupree <vcs@elidupree.com>"]
edition = "2018"

[dependencies]
live-prop-test-macros = { path = "../live-prop-test-macros", version = "0.1" }
rand = "0.7.3"
log = "0.4.8"
scopeguard = "1.1"
ordered-float = "1.0"
once_cell = "1.3"
cpu-time = "1.0"

[dev-dependencies]
proptest = "0.9.5"
