[package]
name = "live-prop-test"
version = "0.1.0"
authors = ["Eli Dupree <vcs@elidupree.com>"]
edition = "2018"
description = "Fearlessly write both cheap and expensive runtime tests (contracts) for functions."
repository = "https://github.com/elidupree/live-prop-test/"
readme = "../README.md"
keywords = ["property", "testing", "contracts"]
categories = ["development-tools", "development-tools::testing"]

[features]
wasm-bindgen = ["instant/wasm-bindgen"]
stdweb = ["instant/stdweb"]

[dependencies]
live-prop-test-macros = { path = "../live-prop-test-macros", version = "0.1.0" }
rand = "0.7.3"
scopeguard = "1.1"
ordered-float = "1.0"
once_cell = "1.3"
cpu-time = "1.0"
cfg-if = "0.1.10"
instant = { version = "0.1", optional = true }

[dev-dependencies]
proptest = "0.9.5"
version-sync = "0.9"
